--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,4 +3,8 @@ body{
   overflow-x: hidden;
 }
 
+.App {
+  max-width: 100vw; /* Evita que exceda a largura da tela */
+  overflow-x: hidden; /* Garanta que a div App não transborde */
+}
 
