--- a/src/css/card.css
+++ b/src/css/card.css
@@ -3,14 +3,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
-  gap: 250px;
+  gap: 200px;
   text-align: left;
   color: black;
 }
 
 .card {
-  width: 14%;
+  width: 85%;
   border: 1px solid #ccc;
   border-radius: 5px;
   margin: 10px;
@@ -22,14 +21,14 @@
 
 .imagemProdutos {
   width: 100%;
-  height: 400px;
+  height: 300px;
   object-fit: cover;
   border-radius: 5px;
   margin-bottom: 10px;
 }
 
 .tituloProduto {
-  font-size: 260%;
+  font-size: 230%;
   height: 40px;
   font-weight: 500;
 }
@@ -55,11 +54,244 @@
   font-size: 150%;
 }
 
-h1{
-  margin-top: 1%;
+.legenda h1{
+  margin-top: 1.5%;
   color: #FCBD11;
   font-weight: 900;
+  font-size: 400%;
   font-style: italic;
+}
+
+@media screen and (max-width: 1425px) {
+
+  .secaoCard > div:nth-child(3) {
+    display: none; 
+  }
+
+}
+
+/*IPAD PAIZAO*/
+@media screen and (max-width: 1020px) {
+
+  .secaoCard {
+    gap: 80px;
+  }
+
+
+}
+
+/*IPAD PAIZAO*/
+@media screen and (max-width: 885px) {
+
+  .secaoCard {
+    margin-top: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 80px;
+    text-align: left;
+    color: black;
+    margin-left: 0%;
+  }
+  
+  .card {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 10px #FCBD11;
+    cursor: pointer;
+  }
+  
+  .imagemProdutos {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .tituloProduto {
+    font-size: 130%;
+    height: 25px;
+    font-weight: 500;
+  }
+  
+  .estrela{
+    font-size: 170%;
+    color: #FCBD11;
+    height: 35px;
+  }
+  
+  .apartir{
+    font-size: 120%;
+    height: 20px;
+  }
+  
+  .preco{
+    font-size: 180%;
+    color: #183168;
+    height: 35px;
+  }
+  
+  .vezes{
+    font-size: 120%;
+  }
+  
+  .legenda h1{
+    margin-top: 8%;
+    color: #FCBD11;
+    font-weight: 900;
+    font-size: 300%;
+    font-style: italic;
+  }
+
+
+}
+
+/*IPAD PAIZAO*/
+@media screen and (max-width: 770px) {
+
+  .secaoCard {
+    margin-top: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    text-align: left;
+    color: black;
+    margin-left: 0%;
+  }
+  
+  .card {
+    width: 83%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 10px #FCBD11;
+    cursor: pointer;
+  }
+  
+  .imagemProdutos {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .tituloProduto {
+    font-size: 130%;
+    height: 25px;
+    font-weight: 500;
+  }
+  
+  .estrela{
+    font-size: 170%;
+    color: #FCBD11;
+    height: 35px;
+  }
+  
+  .apartir{
+    font-size: 120%;
+    height: 20px;
+  }
+  
+  .preco{
+    font-size: 180%;
+    color: #183168;
+    height: 35px;
+  }
+  
+  .vezes{
+    font-size: 120%;
+  }
+  
+  .legenda h1{
+    margin-top: 8%;
+    color: #FCBD11;
+    font-weight: 900;
+    font-size: 300%;
+    font-style: italic;
+  }
+
+}
+
+@media screen and (max-width: 430px) {
+
+  .secaoCard {
+    margin-top: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+    text-align: left;
+    color: black;
+    margin-left: -2%;
+  }
+  
+  .card {
+    width: 83%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 10px #FCBD11;
+    cursor: pointer;
+  }
+  
+  .imagemProdutos {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .tituloProduto {
+    font-size: 150%;
+    height: 25px;
+    font-weight: 500;
+  }
+  
+  .estrela{
+    font-size: 170%;
+    color: #FCBD11;
+    height: 35px;
+  }
+  
+  .apartir{
+    font-size: 120%;
+    height: 20px;
+  }
+  
+  .preco{
+    font-size: 180%;
+    color: #183168;
+    height: 35px;
+  }
+  
+  .vezes{
+    font-size: 120%;
+  }
+  
+  .legenda h1{
+    margin-top: 5%;
+    color: #FCBD11;
+    font-weight: 900;
+    font-size: 200%;
+    font-style: italic;
+    margin-left: -0%;
+  }
+
+  .secaoCard > div:nth-child(3) {
+    display: none; 
+  }
 }
 
 
