--- a/src/css/tela.css
+++ b/src/css/tela.css
@@ -1,11 +1,9 @@
 .figurinha {
     text-align: center;
-    /* Poderia precisar de ajustes de posicionamento ou layout */
 }
 
 .telas {
     min-height: 100vh;
-    overflow-y: auto;  /* Permite que o conteúdo role se ultrapassar a altura da viewport */
 }
 
 .baixoSlide{
@@ -19,19 +17,478 @@
 
 .parcelamento{
     margin-left: 11%;
+    margin-right: 10%;
     border-right: 1px solid white;
-    padding-right: 3.7%;
+    padding-right: 5%;
 }
 
 .desconto{
-    margin-left: -7.9%;
+    margin-left: -23%;
+    margin-right: 5%;
     border-right: 1px solid white;
-    padding-right: 13.8%;
+    padding-right: 8%;
 }
 
 .seguranca{
-    margin-left: -12%;
+    margin-left: -17%;
+    margin-right: 10%;
 }
 
+@media screen and (max-width: 2440px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 20%;
+        background-color: #183168;
+        font-size: 140%;
+        min-width: 100vh;
+        
+    }
+    
+    .parcelamento{
+        margin-left: 15%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -23%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 8%;
+    }
+    
+    .seguranca{
+        margin-left: -17%;
+        margin-right: 10%;
+    }
+
+}
+
+@media screen and (max-width: 1520px) {
+
+    .parcelamento{
+        margin-left: 15px;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -23%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 8%;
+    }
+    
+    .seguranca{
+        margin-left: -14%;
+        margin-right: 10%;
+    }
+
+}
+
+@media screen and (max-width: 1450px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 15%;
+        background-color: #183168;
+        font-size: 140%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+    margin-left: 6%;
+    margin-right: 10%;
+    border-right: 1px solid white;
+    padding-right: 5%;
+}
+
+.desconto{
+    margin-left: -23%;
+    margin-right: 5%;
+    border-right: 1px solid white;
+    padding-right: 8%;
+}
+
+.seguranca{
+    margin-left: -14%;
+    margin-right: 10%;
+}
+    
+}
+
+@media screen and (max-width: 1055px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 20%;
+        background-color: #183168;
+        font-size: 120%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 6%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -23%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 8%;
+    }
+    
+    .seguranca{
+        margin-left: -14%;
+        margin-right: 10%;
+    }
+
+}
+
+@media screen and (max-width: 915px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 20%;
+        background-color: #183168;
+        font-size: 100%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 6%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -23%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 8%;
+    }
+    
+    .seguranca{
+        margin-left: -14%;
+    }
+
+
+}
+
+@media screen and (max-width: 840px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 20%;
+        background-color: #183168;
+        font-size: 85%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 6%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -23%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 8%;
+    }
+    
+    .seguranca{
+        margin-left: -15%;
+    }
+
+}
+
+/*IPAD PAIZAO*/
+@media screen and (max-width: 770px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 20%;
+        background-color: #183168;
+        font-size: 75%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 5%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -25%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .seguranca{
+        margin-left: -21%;
+    }
+
+}
+
+/*IPAD ate CELULAR 1*/
+@media screen and (max-width: 750px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 15%;
+        background-color: #183168;
+        font-size: 75%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 8%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -23%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 2.5%;
+    }
+    
+    .seguranca{
+        margin-left: -16%;
+        margin-right: 10%;
+    }
+
+}
+
+
+
+/*IPAD ate CELULAR 3*/
+@media screen and (max-width: 685px) {
+    
+    .baixoSlide{
+        display: flex;
+        gap: 10%;
+        background-color: #183168;
+        font-size: 60%;
+        min-width: 100vh;
+        
+    }
+    
+    .parcelamento{
+        margin-left: 8%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -18%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 2.5%;
+    }
+    
+    .seguranca{
+        margin-left: -10%;
+        margin-right: 10%;
+        padding-right: 5%;
+    }
+
+
+}
+
+/*IPAD ate CELULAR 4*/
+@media screen and (max-width: 625px) {
+
+    .parcelamento{
+        margin-left: 5%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right: 5%;
+    }
+    
+    .desconto{
+        margin-left: -18%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 2.5%;
+    }
+    
+    .seguranca{
+        margin-left: -10%;
+        
+    }
+}
+
+/*IPAD ate CELULAR 4*/
+@media screen and (max-width: 580px) {
+
+    .parcelamento{
+        margin-left: 6%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right:3%;
+    }
+    
+    .desconto{
+        margin-left: -18%;
+        margin-right: 5%;
+        border-right: 1px solid white;
+        padding-right: 2.5%;
+    }
+    
+    .seguranca{
+        margin-left: -12%;
+        margin-right: 20%;
+        padding-right: 5%;
+    }
+
+}
+
+/*IPAD ate CELULAR 5*/
+@media screen and (max-width: 550px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 10%;
+        background-color: #183168;
+        font-size: 60%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 4%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right:3%;
+    }
+    
+    .desconto{
+        margin-left: -18%;
+        margin-right: 5%;
+        padding-right: 2.5%;
+    }
+    
+    .seguranca{
+        margin-left: -12%;
+        margin-right: 20%;
+        padding-right: 5%;
+    }
+
+}
+
+/*IPAD ate CELULAR 6*/
+@media screen and (max-width: 520px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 10%;
+        background-color: #183168;
+        font-size: 70%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 8%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right:3%;
+    }
+    
+    .desconto{
+        display: none;
+    }
+    
+    .seguranca{
+        margin-left: -17%;
+        margin-right: 20%;
+    }
+
+}
+
+/*IPAD ate CELULAR 7*/
+@media screen and (max-width: 520px) {
+
+    .baixoSlide{
+        display: flex;
+        gap: 7%;
+        background-color: #183168;
+        font-size: 70%;
+        min-width: 100vh;
+        
+    }
+
+    .parcelamento{
+        margin-left: 5%;
+        margin-right: 10%;
+        border-right: 1px solid white;
+        padding-right:2%;
+    }
+    
+    .desconto{
+        display: none;
+    }
+    
+    .seguranca{
+        margin-left: -15%;
+        margin-right: 20%;
+    }
+
+
+}
+
+/*CELULAR PAIZAO*/
+    @media screen and (max-width: 430px) {
+
+        .baixoSlide{
+            display: flex;
+            gap: 7%;
+            background-color: #183168;
+            font-size: 70%;
+            min-width: 100vh;
+            
+        }
+    
+        .parcelamento{
+            margin-left: 3%;
+            margin-right: 10%;
+            border-right: 1px solid white;
+            padding-right:2%;
+        }
+        
+        .desconto{
+            display: none;
+        }
+        
+        .seguranca{
+            margin-left: -13%;
+            margin-right: 20%;
+        }
+
+
+}
 
 
