--- a/src/css/card.css
+++ b/src/css/card.css
@@ -294,6 +294,128 @@
   }
 }
 
+/**/
+@media screen and (max-width: 392px) {
+
+  .secaoCard {
+    margin-top: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+    text-align: left;
+    color: black;
+    margin-left: -2%;
+  }
+  
+  .card {
+    width: 80%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 10px #FCBD11;
+    cursor: pointer;
+  }
+  
+  .imagemProdutos {
+    width: 90%;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .tituloProduto {
+    font-size: 120%;
+    height: 25px;
+    font-weight: 500;
+  }
+  
+  .estrela{
+    font-size: 150%;
+    color: #FCBD11;
+    height: 30px;
+  }
+  
+  .apartir{
+    font-size: 100%;
+    height: 20px;
+  }
+  
+  .preco{
+    font-size: 150%;
+    color: #183168;
+    height: 35px;
+  }
+  
+  .vezes{
+    font-size: 100%;
+  }
+  
+}
+
+@media screen and (max-width: 323px) {
+
+  .secaoCard {
+    margin-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1px;
+    text-align: left;
+    color: black;
+  }
+  
+  .card {
+    width: 75%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 3px 10px #FCBD11;
+    cursor: pointer;
+  }
+  
+  .imagemProdutos {
+    width: 80%;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .tituloProduto {
+    font-size: 100%;
+    height: 15px;
+    font-weight: 500;
+  }
+  
+  .estrela{
+    font-size: 110%;
+    color: #FCBD11;
+    height: 20px;
+  }
+  
+  .apartir{
+    font-size: 90%;
+    height: 18px;
+  }
+  
+  .preco{
+    font-size: 120%;
+    color: #183168;
+    height: 25px;
+  }
+  
+  .vezes{
+    font-size: 90%;
+  }
+
+}
+
 
 
   
