--- a/src/css/topo.css
+++ b/src/css/topo.css
@@ -812,6 +812,49 @@ h4 {
   cursor: pointer;
   font-size: 110%;
 }
+}
+
+@media screen and (max-width: 380px) {
+
+  .lupass{
+    display: block;
+    font-size: 1.5rem;
+    color: white;
+    margin-right: 20%;
+    cursor: pointer;
+  }
+  
+  .icons {
+      display: flex;
+      margin-left: -12%;
+      margin-right: 5%;
+      align-items: center;
+  }
+
+  .respon{
+    display: none;
+  }
+  
+  .icon {
+    cursor: pointer;
+    font-size:1rem;
+    color: white;
+  }
+  
+  .icon:hover {
+    color: lightgray;
+  }
+  
+  .icons {
+    display: flex;
+    gap: 25px; 
+  }
+
+  .icon {
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: white;
+  }
 
 }
 
@@ -840,7 +883,7 @@ h4 {
   .icons {
       display: flex;
       margin-left: -12%;
-      margin-right: 8%;
+      margin-right: 5%;
       align-items: center;
   }
 
@@ -923,5 +966,53 @@ h4 {
   font-size: 110%;
 }
 
+}
+
+@media screen and (max-width: 340px) {
+
+  .logo {
+    height: 20px;
+    width: auto;
+    cursor: pointer;
+    margin-left: -8%;
+  }
+    
+  .barraPesquisa {
+    display: none;
+  }
+
+  .lupass{
+    display: block;
+    font-size: 1rem;
+    color: white;
+    margin-left: 100%;;
+    cursor: pointer;
+  }
+  
+  .icons {
+      display: flex;
+      margin-left: -12%;
+      margin-right: 5%;
+      align-items: center;
+  }
+
+  .respon{
+    display: none;
+  }
+  
+  .icon {
+    cursor: pointer;
+    font-size:1rem;
+    color: white;
+  }
+  
+  .icon:hover {
+    color: lightgray;
+  }
+  
+  .icons {
+    display: flex;
+    gap: 30px; 
+  }
 }
     
