--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,7 +4,29 @@ body{
 }
 
 .App {
-  max-width: 100vw; /* Evita que exceda a largura da tela */
-  overflow-x: hidden; /* Garanta que a div App não transborde */
+  max-width: 100vw;
+  overflow-x: hidden; 
+}
+
+/* Estilo da barra de rolagem */
+::-webkit-scrollbar {
+  width: 10px; 
+  height: 12px; /
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 100px; 
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px;
 }
 
